COVID-19 lockdown day 3

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="logo square">
-    <div class="square instagram">
-        <div class="camera-border">
-            <div class="camera-flash"></div>
-            <div class="camera-lens"></div>
+<div class="logos">
+    <div class="logo square">
+        <div class="square instagram">
+            <div class="camera-border">
+                <div class="camera-flash"></div>
+                <div class="camera-lens"></div>
+            </div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square microsoft">
+            <div class="red"></div>
+            <div class="green"></div>
+            <div class="blue"></div>
+            <div class="yellow"></div>
         </div>
     </div>
 </div>
