COVID-19 lockdown day 4

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/instagram.css" rel="stylesheet">
+    <link href="styles/microsoft.css" rel="stylesheet">
+    <link href="styles/spotify.css" rel="stylesheet">
+    <link href="styles/oneplus.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -18,6 +23,32 @@
             <div class="green"></div>
             <div class="blue"></div>
             <div class="yellow"></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square spotify">
+            <div class="strip strip-1"></div>
+            <div class="strip strip-2"></div>
+            <div class="strip strip-3"></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square oneplus">
+            <div class="icon">
+                <div class="one">
+                    <div class="a"></div>
+                    <div class="b"></div>
+                    <div class="c"></div>
+                </div>
+                <div class="plus">
+                    <div class="cross"></div>
+                    <div class="cross horizontal"></div>
+                </div>
+            </div>
+            <div class="oneplus-text">
+                <span class="one">one</span>
+                <span class="plus">plus</span>
+            </div>
         </div>
     </div>
 </div>
