COVID-19 lockdown day 4

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="styles/microsoft.css" rel="stylesheet">
     <link href="styles/spotify.css" rel="stylesheet">
     <link href="styles/oneplus.css" rel="stylesheet">
+    <link href="styles/mastercard.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -49,6 +50,13 @@
                 <span class="one">one</span>
                 <span class="plus">plus</span>
             </div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square mastercard">
+            <div class="circle yellow background"></div>
+            <div class="circle red"></div>
+            <div class="circle yellow"></div>
         </div>
     </div>
 </div>
