COVID-19 lockdown day 5

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/instagram.css" rel="stylesheet">
     <link href="styles/microsoft.css" rel="stylesheet">
     <link href="styles/spotify.css" rel="stylesheet">
     <link href="styles/oneplus.css" rel="stylesheet">
     <link href="styles/mastercard.css" rel="stylesheet">
+    <link href="styles/newbalance.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -57,6 +59,26 @@
             <div class="circle yellow background"></div>
             <div class="circle red"></div>
             <div class="circle yellow"></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square newbalance">
+            <span>NB</span>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
         </div>
     </div>
 </div>
