COVID-19 lockdown day 6

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/instagram.css" rel="stylesheet">
     <link href="styles/microsoft.css" rel="stylesheet">
@@ -9,6 +11,7 @@
     <link href="styles/oneplus.css" rel="stylesheet">
     <link href="styles/mastercard.css" rel="stylesheet">
     <link href="styles/newbalance.css" rel="stylesheet">
+    <link href="styles/adidas.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -79,6 +82,22 @@
             <div class="strip"></div>
             <div class="strip"></div>
             <div class="strip"></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square adidas">
+            <div class="icon">
+                <div class="wrapper">
+                    <div class="strip left"></div>
+                    <div class="strip middle"></div>
+                    <div class="strip right"></div>
+                </div>
+            </div>
+            <div class="text extra-bold" style="
+    font-weight: 900;
+">
+                <span>adidas</span>
+            </div>
         </div>
     </div>
 </div>
