COVID-19 lockdown day 6

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="styles/mastercard.css" rel="stylesheet">
     <link href="styles/newbalance.css" rel="stylesheet">
     <link href="styles/adidas.css" rel="stylesheet">
+    <link href="styles/adidas-originals.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -92,6 +93,38 @@
                     <div class="strip middle"></div>
                     <div class="strip right"></div>
                 </div>
+            </div>
+            <div class="text extra-bold" style="
+    font-weight: 900;
+">
+                <span>adidas</span>
+            </div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square adidas-original">
+            <div class="icon">
+                <div class="leaf left" style="
+    /* display: none; */
+">
+                    <div class="half left"></div>
+                    <div class="half right"></div>
+                </div>
+                <div class="leaf middle" style="/* display: none; */">
+                    <div class="half left"></div>
+                    <div class="half right"></div>
+                </div>
+                <div class="leaf right" style="
+">
+                    <div class="half left"></div>
+                    <div class="half right"></div>
+                </div>
+                <div class="white-strip">
+                    <div class="strip"></div>
+                    <div class="strip"></div>
+                    <div class="strip"></div>
+                </div>
+
             </div>
             <div class="text extra-bold" style="
     font-weight: 900;
