COVID-19 lockdown day 7

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet">
 
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/instagram.css" rel="stylesheet">
@@ -13,6 +16,8 @@
     <link href="styles/newbalance.css" rel="stylesheet">
     <link href="styles/adidas.css" rel="stylesheet">
     <link href="styles/adidas-originals.css" rel="stylesheet">
+    <link href="styles/hsbc.css" rel="stylesheet">
+    <link href="styles/rolls-royce.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -131,6 +136,26 @@
 ">
                 <span>adidas</span>
             </div>
+        </div>
+    </div>
+    <div class="logo square hidden">
+        <div class="square hsbc">
+            <div class="arrow-left red left"></div>
+            <div class="arrow-right white left"></div>
+            <div class="arrow-left white right"></div>
+            <div class="arrow-right red right"></div>
+            <div class="arrow-down red middle"></div>
+            <div class="arrow-up red middle"></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square rolls-royce">
+            <div class="rolls"><span>Rolls</span></div>
+            <div class="rr">
+                <span class="r">R</span>
+                <span class="r">R</span>
+            </div>
+            <div class="royce"><span>Royce</span></div>
         </div>
     </div>
 </div>
