COVID-19 lockdown day 7

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
             </div>
         </div>
     </div>
-    <div class="logo square hidden">
+    <div class="logo square">
         <div class="square hsbc">
-            <div class="arrow-left red left"></div>
-            <div class="arrow-right white left"></div>
-            <div class="arrow-left white right"></div>
-            <div class="arrow-right red right"></div>
-            <div class="arrow-down red middle"></div>
-            <div class="arrow-up red middle"></div>
+            <div class="arrow-left red"></div>
+            <div class="arrow-right white"></div>
+            <div class="arrow-down red"></div>
+            <div class="arrow-up red"></div>
+            <div class="arrow-left white"></div>
+            <div class="arrow-right red"></div>
         </div>
     </div>
     <div class="logo square">
