COVID-19 lockdown day 8

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap" rel="stylesheet">
 
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/instagram.css" rel="stylesheet">
@@ -18,6 +19,7 @@
     <link href="styles/adidas-originals.css" rel="stylesheet">
     <link href="styles/hsbc.css" rel="stylesheet">
     <link href="styles/rolls-royce.css" rel="stylesheet">
+    <link href="styles/bbc.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -156,6 +158,13 @@
                 <span class="r">R</span>
             </div>
             <div class="royce"><span>Royce</span></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square bbc">
+            <div class="block"><div class="letter">B</div></div>
+            <div class="block"><div class="letter">B</div></div>
+            <div class="block"><div class="letter">C</div></div>
         </div>
     </div>
 </div>
