COVID-19 lockdown day 9

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="styles/hsbc.css" rel="stylesheet">
     <link href="styles/rolls-royce.css" rel="stylesheet">
     <link href="styles/bbc.css" rel="stylesheet">
+    <link href="styles/stackoverflow.css" rel="stylesheet">
+    <link href="styles/paypal.css" rel="stylesheet">
 </head>
 <body>
 <div class="logos">
@@ -165,6 +167,28 @@
             <div class="block"><div class="letter">B</div></div>
             <div class="block"><div class="letter">B</div></div>
             <div class="block"><div class="letter">C</div></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square stackoverflow">
+            <div class="base"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+        </div>
+    </div>
+    <div class="logo square">
+        <div class="square paypal">
+            <div class="p upper">
+                <div class="bar"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="p lower">
+                <div class="bar"></div>
+                <div class="circle"></div>
+            </div>
         </div>
     </div>
 </div>
