COVID-19 lockdown day 10

--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
                 <div class="bar"></div>
                 <div class="circle"></div>
             </div>
+
+            <div class="p upper">
+                <div class="bar"></div>
+                <div class="circle"></div>
+            </div>
             <div class="p lower">
                 <div class="bar"></div>
                 <div class="circle"></div>
